[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/WorldComplete.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/SaveSystem.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/NextLvl.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="WorldComplete" type="Area2D"]
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SaveSystem" parent="." instance=ExtResource( 3 )]

[node name="NextLvl" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="." to="." method="_on_WorldComplete_body_entered"]
